[package]
name = "pictureindexer"
version = "0.1.0"
authors = ["Johnny Hujol <itudoben@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "picturelib"
path = "src/libs.rs"

[dependencies]
#rand = "0.8.3"
#async-fs = "1.5.0"
#reqwest = "0.11.3"
#select = "0.5.0"
#tokio = { version = "1", features = ["full"] }
#futures-lite = "1.11.3"
#chrono = "0.4.19"
kamadak-exif = "0.5.4"